--- a/nani.html
+++ b/nani.html
@@ -9,7 +9,7 @@
         body{margin:0;display:flex;align-items:center;justify-content:center;font-family:system-ui,-apple-system,Segoe UI,Roboto,"Helvetica Neue",Arial;color:#222;background:#f7f7f7}
         .box{text-align:center;padding:2rem}
         h1{font-size:2rem;margin:0}
-        p{color:#666;margin-top:.5rem}
+        p{color:#b3d50a;margin-top:.5rem}
     </style>
 </head>
 <body>
